--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
 @charset "utf-8";
 
-
 //@import ;url('https://fonts.googleapis.com/css?family=Open+Sans|Libre+Baskerville');
 
 //@use 'bulma/versions/bulma-no-dark-mode';
@@ -78,21 +77,19 @@
     src: url('assets/fonts/poppins-v20-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
-
 :root {
     // Bulma overwrites
     --bulma-family-primary: 'Poppins';
     --bulma-family-secondary: 'Poppins';
     // TODO test this
-    --bulma-button-static-background-color: #F5F5F5;
+    --bulma-button-static-background-color: #f5f5f5;
 
     --bulma-duration: 150ms;
     //--bulma-button-color
 
-
     // Non-Bulma theming
 
-    --background-color-light: #F5F5F5;
+    --background-color-light: #f5f5f5;
 
     --algorithm-mode-color: var(--bulma-primary);
 }
@@ -115,8 +112,13 @@ body {
     // overflow: auto;
 }
 
-body, .box, .hr, .button  {
-    transition: background 150ms ease-in-out, color 250ms ease-in-out;
+body,
+.box,
+.hr,
+.button {
+    transition:
+        background 150ms ease-in-out,
+        color 250ms ease-in-out;
 }
 
 .vr {
@@ -125,7 +127,6 @@ body, .box, .hr, .button  {
 }
 
 // dark mode
-
 
 body.theme-light {
     background-size: cover;
@@ -142,7 +143,7 @@ body.theme-light strong {
     color: var(--bulma-dark);
 }
 
-body.theme-light .box, {
+body.theme-light .box {
     background-color: var(--background-color-light);
 }
 
@@ -163,6 +164,7 @@ body.theme-dark .navbar-burger {
 body.theme-dark .button {
     background-color: var(--bulma-grey-darker);
     color: var(--white-dark-78);
+    outline: 1px solid;
 }
 
 body.theme-dark .button:hover {
@@ -171,8 +173,14 @@ body.theme-dark .button:hover {
 
 body.theme-dark .button:disabled,
 body.theme-dark button[disabled] {
-    color: var(--bulma-white);;
+    color: var(--bulma-white);
     background-color: var(--white-dark-38);
+}
+
+body.theme-dark .select select {
+    background-color: var(--bulma-dark);
+    color: var(--white-dark-87);
+    outline: 1px solid;
 }
 
 //button:focus:hover {
@@ -194,24 +202,23 @@ body.theme-dark button[disabled] {
 
 body.theme-dark .box {
     background-color: var(--bulma-dark);
-    color: var(--white-dark-87)
+    color: var(--white-dark-87);
 }
 
-textarea:focus, input:focus{
+textarea:focus,
+input:focus {
     outline: none;
 }
 
 *:focus {
     outline: none;
-
 }
 
-
 // TODO specificity???
-@media(prefers-reduced-motion: no-preference) {
+@media (prefers-reduced-motion: no-preference) {
     button:focus-visible {
         transition: outline-offset 75ms ease-out;
-        outline-offset: .5rem;
+        outline-offset: 0.5rem;
     }
 
     button:not(:active):focus-visible {
